# product_kernel-app

./: .gitattributes  .gitignore  README.md  pyproject.toml
src/product_kernel/: __init__.py  autodiscover.py  fastapi.py
src/product_kernel.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/product_kernel/api/: __init__.py  health_router.py
src/product_kernel/config/: base_settings.py
src/product_kernel/db/: alembic_env_template.py  context.py  engine.py  middleware.py  seed_runner.py  session.py  tx.py
src/product_kernel/di/: inject.py  registry.py
src/product_kernel/repos/: base.py
src/product_kernel/security/: deps.py  exception_middleware.py  jwt_provider.py  principal.py
src/product_kernel/services/: base_service.py
src/product_kernel/testing/: __init__.py  fixtures.py
src/product_kernel/web/: api.py  errors.py
